# example-worker-wasm

./: README.md  next.config.mjs  package.json
src/app/: layout.tsx  page.module.scss  page.tsx
src/app/api/examples/: route.ts
src/app/base/: page.tsx  useExamples.ts
src/app/use-wasm-base/: page.tsx  useExamples.ts
src/app/use-wasm-worker/: page.tsx  worker.ts
src/app/use-worker/: page.tsx  useExamples.ts  worker.ts
src/app/use-worker-fetch/: page.tsx  useExamples.ts  worker.ts
src/components/common/Button/: Button.module.scss  Button.tsx
src/components/common/PageLoading/: PageLoading.module.scss  PageLoading.tsx
src/components/examples/: ExampleListContainer.module.scss  ExampleListContainer.tsx
src/components/examples/_sub/: ExampleCard.module.scss  ExampleCard.tsx  ExampleGrid.tsx
src/lib/: types.ts  utils.ts
src/styles/: globals.scss
wasm/: .gitignore  Cargo.toml  LICENSE_MIT
wasm/src/: lib.rs  types.rs  utils.rs
